; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetTtcTypeStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetTtcTypeStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"TTC_TYPE_DOWNLOAD\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"TTC_TYPE_UPLOAD\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"TTC_TYPE_FULL\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetTtcTypeStr(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 129, label %5
    i32 128, label %7
  ]

5:                                                ; preds = %1
  %6 = call i32* @_UU(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %2, align 8
  br label %11

7:                                                ; preds = %1
  %8 = call i32* @_UU(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  store i32* %8, i32** %2, align 8
  br label %11

9:                                                ; preds = %1
  %10 = call i32* @_UU(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  store i32* %10, i32** %2, align 8
  br label %11

11:                                               ; preds = %9, %7, %5
  %12 = load i32*, i32** %2, align 8
  ret i32* %12
}

declare dso_local i32* @_UU(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
